# robot_assembler

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: kxr_parts00_button_layout.yaml  kxr_parts01_button_layout.yaml  kxr_parts02_button_layout.yaml  kxr_parts03_button_layout.yaml  kxr_parts04_button_layout.yaml  parts00_button_layout.yaml  parts01_button_layout.yaml  parts02_button_layout.yaml  robot_assembler.rosinstall  robot_assembler_buttons.perspective  robot_assembler_buttons_layout.yaml  robot_assembler_buttons_new.perspective  robot_assembler_kxr_buttons_layout.yaml  robot_assembler_kxr_settings.yaml  robot_assembler_kxr_tabbed_buttons.yaml  robot_assembler_main_buttons_layout.yaml  robot_assembler_module_buttons_layout.yaml  robot_assembler_module_settings.yaml  robot_assembler_parts_settings.yaml  robot_assembler_tabbed_buttons.yaml
docker/: Dockerfile.assembler  Dockerfile.for_run  docker-compose.assemble.yaml  run_docker.sh
euslisp/: README.md  assembled-robot-interface.l  compile-kxr-robot.l  compile.sh  conversion-roboasm.l  convert-rcb4robots.l  create-box-decomposition-sample.l  eus-yaml.l  make-dynamixel-parts.l  robot-assembler-gazebo.l  robot-assembler-node.l  robot-assembler-utils.l  robot-assembler-viewer.l  robot-assembler.l  test-make-part.l
gazebo/: gazebo_plugins.xacro  move_sample.py  range_sample.py  robot_assembler_gazebo.launch  robot_assembler_gazebo_robot.launch  robot_assembler_gazebo_world.launch  urdf_check.launch  view_urdf.rviz
gazebo/worlds/: sample_maze.world  table_manipulation.world
launch/: kxr_assembler.launch  robot_assembler.launch  robot_assembler_buttons.launch
meshes/: assembler_actuator.dae  assembler_hinge.dae  back_basket.dae  body-parts-a-new.dae  body-parts-a.dae  body-parts-b.dae  body-parts-c.dae  foot-plate.dae  fr12_e170.dae  fr12_e171.dae  fr12_h101.dae  fr12_h101s.dae  fr12_h102.dae  fr12_h103.dae  fr12_s101.dae  fr12_s102.dae  fr12_s103.dae  fr12_s103_a.dae  fr12_s103_b.dae  fr12_x102.dae  fr12_x103.dae  hr12_f101.dae  mesh_ANGLE-BRACKET.dae  mesh_ARM-SUPPORTER-A.dae  mesh_ARM-SUPPORTER-B.dae  mesh_BACK-PACK.dae  mesh_BATTERY-BOX.dae  mesh_BATTERY-LEG-PLATE.dae  mesh_BODY-PLATE-SPACER.dae  mesh_BODY-PLATE.dae  mesh_BODY_CUT_PLATE.dae  mesh_BOTTOM-ARM20.dae  mesh_BOTTOM-ARM26.dae  mesh_BOTTOM-ARM28.dae  mesh_BOTTOM-ARM38.dae  mesh_BOTTOM-SPACER.dae  mesh_BOTTOM-SPACER2.dae  mesh_CROSS-SERVO-FRAME-A.dae  mesh_CROSS-SERVO-FRAME-B.dae  mesh_DUMMY-HALF-SERVO.dae  (+22 more)
meshes/kxr_auv/: M5_camera_head.STL  body_box_mount.STL  body_box_rect_thin_rev6_eusmodel.STL  buoyancybody-t35.STL
meshes/kxr_uav/: uav_backpack.STL  uav_backpack_mount.STL
sample/: FIXED_ARM.l  FIXED_ARM.roboasm.l  FIXED_ARM.urdf  FIXED_ARM.urdf.gz_controller.yaml  FIXED_ARM.urdf.xacro  SAMPLE.l  SAMPLE.roboasm.l  SAMPLE.urdf  SAMPLE.urdf.euscollada.yaml  SAMPLE.urdf.gz_controller.yaml  SAMPLE_HUMANOID.l  SAMPLE_HUMANOID.roboasm.l  SAMPLE_HUMANOID.rviz  SAMPLE_HUMANOID.urdf  SAMPLE_HUMANOID.urdf.euscollada.yaml  SAMPLE_HUMANOID.urdf.gz_controller.yaml  SAMPLE_HUMANOID.urdf.xacro  sample.l
sample/1st_assignment/: 37-196321_3388049435_CREEPINGROBO.roboasm.l  37-196945.roboasm.l  37-196957.roboasm.l  37-197144hebi_model.roboasm.l  37-206197created.roboasm.l  37-206363_1194751660_kadai1_robot.roboasm.l  47-206684TEST5.roboasm.l  48-196307ex1.roboasm.l  48-196511.roboasm.l  48-196543.roboasm.l  48-196639MHATTORI.roboasm.l  48-206501.roboasm.l  48-206515wheeled_robot2.roboasm.l  48-206517_2781018614_4leg_1neck_robot.roboasm.l  48-206518SlipperBot.roboasm.l  48-206545_2368169600_sekizui_robot.roboasm.l  48-206554.roboasm.l  48-206612.roboasm.l
sample/kxr/: kxr-merge-sample.l  kxr_body.roboasm.l  kxr_fullbody.roboasm.l  kxr_head.roboasm.l  kxr_larm.roboasm.l  kxr_lleg.roboasm.l  kxr_rarm.roboasm.l  kxr_rleg.roboasm.l  sensor_sample.roboasm.l
sample/kxr_auv/: diff.txt  kxr_auv_fullbody.roboasm.l  kxr_auv_fullbody.roboasm.l.back  kxr_auv_fullbody.urdf  kxr_auv_fullbody.urdf.euscollada.yaml  kxr_auv_fullbody.urdf.gz_controller.yaml  kxr_auv_fullbody_initial.roboasm.l  kxr_auv_fullbody_initial.urdf  kxr_auv_fullbody_model.urdf.euscollada.yaml  larm.roboasm.l  larm.urdf  larm.urdf.euscollada.yaml  lleg.roboasm.l  merge.l  (+22 more)
scripts/: Dockerfile  create_model_with_sensors.py  create_model_with_sensors.sh  create_urdf.sh  dump_yaml_to_sexp.py  exec_docker.sh  run_docker.sh
src/: eus_yaml_cpp.cpp
test/: kxr4r.roboasm.l  kxr4r.test2.roboasm.l  kxr4r.test3.roboasm.l  kxr_fullbody.roboasm.l  test-roboasm-base.l
(+103 files in other folders)
