<package>
  <name>robot_assembler</name>
  <version>0.0.1</version>

  <description>
    package for assemble robot using GUI
  </description>
  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp">Yohei Kakiuchi</author>
  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roseus</build_depend>
  <build_depend>eus_assimp</build_depend>
  <build_depend>euscollada</build_depend>

  <run_depend>roseus</run_depend>
  <run_depend>eus_assimp</run_depend>
  <run_depend>euscollada</run_depend>
  <run_depend>jsk_rqt_plugins</run_depend>
  <run_depend>pr2eus</run_depend>
  <!-- -->
  <run_depend>urdf_tutorials</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>rqt_gui</run_depend>
  <!-- -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>
</package>
